apps/pharmacie-hirsingue/templates/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pharmacie-hirsingue
spec:
  selector:
    matchLabels:
      app: pharmacie-hirsingue
  replicas: 1
  template:
    metadata:
      labels:
        app: pharmacie-hirsingue
    spec:
      containers:
      - name: pharmacie-hirsingue
        image: registry.gitlab.com/kelbert-web-services/pharmacie-de-l-ill:v1.0.0
        ports:
        - containerPort: 80
