apps/pharmacie-hirsingue/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pharmacie-hirsingue
  labels:
    app: pharmacie-hirsingue
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: pharmacie-hirsingue
