apps/pharmacie-hirsingue/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pharmacie-hirsingue-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-https@kubernetescrd
spec:
  rules:
  - host: pharmacie-hirsingue.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pharmacie-hirsingue
            port:
              number: 80
  tls:
    - hosts:
      - pharmacie-hirsingue.com
      secretName: pharmacie-hirsingue.com-tls
